--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h1 {
 
 main {
     grid-area: main;
-    margin-bottom: 9.6rem;
+    margin-bottom: 7.2rem;
 }
 
 .play_window {
@@ -107,10 +107,10 @@ aside {
 
 h2 {
     text-align: center;
-    width: 30rem;
+    width: 24rem;
     padding: 2.4rem 0;
     margin: 2.4rem 0;
-    font-size: 3.6rem;
+    font-size: 2.4rem;
     border-radius: 1.2rem;
 }
 
@@ -128,16 +128,46 @@ h2 span {
     margin-left: 2.4rem;
 }
 
+.window {
+    width: 22rem;
+    grid-area: window;
+}
+/* Status bar */
+
+.status_bar {
+    text-align: center;
+}
+
+.status {
+    font-size: 3.6rem;
+    font-weight: 700;
+    margin: 4.8rem 0;
+}
+
+.btn {
+    background-color: hsl(215, 50%, 23%);
+    color: hsl(105, 55%, 96%);
+    border: none;
+    width: 24rem;
+    border-radius: 1.2rem;
+    padding: 1.8rem 3.6rem;
+    font-size: 2.4rem;
+    margin: 0 2rem;
+}
+
 /* Footer */
 
 footer {
     grid-area: footer;
     text-align: center;
+    font-size: 1.2rem;
+    border-top: 1px solid hsl(215, 50%, 23%);
+    padding: 1.2rem;
 }
 
 .icon {
     fill: hsl(215, 50%, 23%);
-    width: 2.4rem;
+    width: 1.6rem;
     margin-right: 0.5rem;
 }
 
