--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 30rem 1fr 30rem;
     place-content: center;
     height: 100vh;
     grid-template:
@@ -51,10 +50,12 @@ header {
 }
 
 h1 {
-    font-size: 9.6rem;
+    font-size: 7.2rem;
     margin-bottom: 2.4rem;
     text-align: center;
     color: hsl(355, 78%, 56%);
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
+        0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
 /* Main Window */
@@ -62,6 +63,7 @@ h1 {
 main {
     grid-area: main;
     margin-bottom: 7.2rem;
+    width: 49rem;
 }
 
 .play_window {
@@ -74,11 +76,14 @@ main {
 }
 
 .play_window div {
-    padding: 4.8rem 7.2rem;
+    display: grid;
+    height: 16rem;
+    width: 16rem;
     font-size: 7.2rem;
     font-weight: 700;
     background-color: hsl(105, 55%, 96%);
     place-self: center;
+    place-content: center;
 }
 
 #block_1 {
@@ -95,6 +100,14 @@ main {
 
 #block_9 {
     border-bottom-right-radius: 2.4rem;
+}
+
+.player1 {
+    color: hsl(355, 78%, 56%);
+}
+
+.player2 {
+    color: hsl(203, 39%, 44%);
 }
 
 /* Sidebar for Scores */
@@ -148,11 +161,11 @@ h2 span {
     background-color: hsl(215, 50%, 23%);
     color: hsl(105, 55%, 96%);
     border: none;
-    width: 24rem;
+    width: 20rem;
     border-radius: 1.2rem;
-    padding: 1.8rem 3.6rem;
+    padding: 1.6rem 3.2rem;
     font-size: 2.4rem;
-    margin: 0 2rem;
+    margin: 0 1.2rem;
 }
 
 /* Footer */
