--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,7 @@ h1 {
     margin-bottom: 2.4rem;
     text-align: center;
     color: hsl(355, 78%, 56%);
-    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
-        0px 18px 23px rgba(0, 0, 0, 0.1);
+    text-shadow: 0px 6px 3px rgba(0, 0, 0, 0.2);
 }
 
 /* Main Window */
@@ -63,27 +62,41 @@ h1 {
 main {
     grid-area: main;
     margin-bottom: 7.2rem;
-    width: 49rem;
 }
 
 .play_window {
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-    background-color: hsl(215, 50%, 23%);
-    gap: 0.5rem;
-    border-radius: 10rem;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    border-radius: 2.4rem;
+    background-color: hsl(105, 55%, 96%);
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.2);
+    color: hsl(105, 55%, 96%);
 }
 
 .play_window div {
-    display: grid;
-    height: 16rem;
-    width: 16rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 15rem;
     font-size: 7.2rem;
     font-weight: 700;
-    background-color: hsl(105, 55%, 96%);
-    place-self: center;
-    place-content: center;
+}
+
+#block_5 {
+    border: 2px solid hsl(215, 50%, 23%);
+}
+
+#block_2,
+#block_8 {
+    border-left: 2px solid hsl(215, 50%, 23%);
+    border-right: 2px solid hsl(215, 50%, 23%);
+}
+
+#block_4,
+#block_6 {
+    border-top: 2px solid hsl(215, 50%, 23%);
+    border-bottom: 2px solid hsl(215, 50%, 23%);
 }
 
 #block_1 {
@@ -110,31 +123,40 @@ main {
     color: hsl(203, 39%, 44%);
 }
 
+.player1_win {
+    background-color: hsl(355, 78%, 56%);
+    color: hsl(105, 55%, 96%);
+}
+
+.player2_win {
+    background-color: hsl(203, 39%, 44%);
+    color: hsl(105, 55%, 96%);
+}
+
 /* Sidebar for Scores */
 
 aside {
     grid-area: aside;
-    margin-right: -2rem;
+    margin-right: -1rem;
     z-index: -1;
 }
 
 h2 {
     text-align: center;
-    width: 24rem;
-    padding: 2.4rem 0;
-    margin: 2.4rem 0;
+    width: 20rem;
+    padding: 1.6rem 0;
+    margin: 1.4rem 0;
     font-size: 2.4rem;
     border-radius: 1.2rem;
+    color: hsl(105, 55%, 96%);
 }
 
 .p1 {
     background-color: hsl(355, 78%, 56%);
-    color: hsl(105, 55%, 96%);
 }
 
 .p2 {
     background-color: hsl(203, 39%, 44%);
-    color: hsl(105, 55%, 96%);
 }
 
 h2 span {
@@ -163,9 +185,10 @@ h2 span {
     border: none;
     width: 20rem;
     border-radius: 1.2rem;
-    padding: 1.6rem 3.2rem;
+    padding: 1.6rem 0;
     font-size: 2.4rem;
     margin: 0 1.2rem;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 /* Footer */
