--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ main {
     height: 15rem;
     font-size: 7.2rem;
     font-weight: 700;
+    transition: all 100ms;
 }
 
 #block_5 {
@@ -121,6 +122,21 @@ main {
 .player2 {
     background-color: hsl(189, 60%, 34%);
     color: hsl(0, 0%, 100%) !important;
+}
+
+.indicator {
+    display: flex;
+    justify-content: center;
+}
+
+.indicator img {
+    width: 10rem;
+    transition: all 100ms;
+}
+
+.hide {
+    visibility: hidden;
+    opacity: 0;
 }
 
 /* Left Sidebar for Scores */
@@ -179,6 +195,7 @@ h2 span {
     font-weight: 700;
     padding: 1.2rem 0;
     margin: 4.8rem 0 1.2rem;
+    transition: all 100ms;
 }
 
 .win {
@@ -208,7 +225,13 @@ h2 span {
 }
 
 #play_again {
-    margin-top: 19rem;
+    position: absolute;
+    top: 42rem;
+}
+
+#reset {
+    position: absolute;
+    top: 50rem;
 }
 
 /* Footer */
