--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ header img {
 main {
     grid-area: main;
     margin-bottom: 7.2rem;
+    max-width: 45rem;
 }
 
 .play_window {
@@ -77,8 +78,6 @@ main {
     align-items: center;
     width: 15rem;
     height: 15rem;
-    font-size: 7.2rem;
-    font-weight: 700;
     transition: all 100ms;
 }
 
